--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,13 @@
     {
       "files": ["*.js", "*.jsx"],
       "rules": {
-        "sort-keys-fix/sort-keys-fix": ["warn", "asc", { "natural": true }]
+        "sort-keys-fix/sort-keys-fix": [
+          "warn",
+          "asc",
+          {
+            "natural": true
+          }
+        ]
       }
     }
   ],
@@ -102,16 +108,16 @@
     "import/export": "off",
     "import/extensions": "off",
     "import/newline-after-import": "warn",
-    "import/no-extraneous-dependencies": "off",
     "import/no-anonymous-default-export": "off",
+    "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
     "import/order": "warn",
     "import/prefer-default-export": "off",
     "indent": "off",
     "init-declarations": "warn",
-    "jest/require-hook": "off",
     "jest/no-hooks": "off",
     "jest/prefer-expect-assertions": "off",
+    "jest/require-hook": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/interactive-supports-focus": "off",
     "jsx-a11y/no-static-element-interactions": "warn",
@@ -131,8 +137,9 @@
     "multiline-comment-style": "off",
     "multiline-ternary": "off",
     "no-console": "warn",
-    "no-duplicate-imports": "off",
+    "no-constant-condition": "warn",
     "no-debugger": "warn",
+    "no-duplicate-imports": "off",
     "no-else-return": "off",
     "no-extra-parens": "off",
     "no-extra-semi": "warn",
@@ -172,12 +179,18 @@
     "prefer-destructuring": "off",
     "prefer-named-capture-group": "off",
     "prettier/prettier": "off",
+    "quote-props": [
+      "warn",
+      "as-needed",
+      {
+        "unnecessary": true
+      }
+    ],
     "quotes": "off",
-    "quote-props": ["warn", "as-needed", { "unnecessary": true }],
     "react-hooks/exhaustive-deps": "off",
     "react/button-has-type": "off",
-    "react/display-name": "off",
     "react/default-props-match-prop-types": "off",
+    "react/display-name": "off",
     "react/function-component-definition": [
       2,
       {
