--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.3.5",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.5.1",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier": "^9.0.3",
