implemented signup component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,14 +62,7 @@
     "project": "./tsconfig.json",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "unused-imports",
-    "sort-keys-fix",
-    "prettier",
-    "jsx-a11y",
-    "jest"
-  ],
+  "plugins": ["react", "unused-imports", "sort-keys-fix", "prettier", "jsx-a11y", "jest"],
   "rules": {
     "array-bracket-newline": "off",
     "array-element-newline": "off",
@@ -213,6 +206,7 @@
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-sort-props": "off",
+    "react/jsx-tag-spacing": "warn",
     "react/jsx-wrap-multilines": "off",
     "react/no-multi-comp": "off",
     "react/no-unstable-nested-components": "off",
