implemented user auth | connected to backend

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -218,7 +218,7 @@
     "sort-imports": [
       "warn",
       {
-        "ignoreCase": false,
+        "ignoreCase": true,
         "ignoreDeclarationSort": true,
         "ignoreMemberSort": false,
         "memberSyntaxSortOrder": ["none", "all", "single", "multiple"]
