--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jss-plugin-extend": "^10.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-jss": "^10.9.0",
     "react-router-dom": "^6.2.2",
