--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "jss-plugin-extend": "^10.9.0",
+    "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "socket.io-client": "^4.4.1",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
