--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.3.5",
+    "per-env": "^1.0.2",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.5.1",
     "stylelint": "^14.5.3",
@@ -77,7 +78,9 @@
     "pre-commit": "lint-staged",
     "prepare": "husky install",
     "prettier": "prettier --write .",
-    "start": "react-scripts start",
+    "start": "per-env",
+    "start:development": "react-scripts start",
+    "start:production": "npx serve -s build",
     "stylelint": "stylelint \"**/*.{css,scss,sass,js,jsx}\" ",
     "test": "react-scripts test"
   },
