--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.1.1",
     "jss-plugin-extend": "^10.9.0",
     "peerjs": "^1.3.2",
+    "per-env": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -46,13 +47,15 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.3.5",
-    "per-env": "^1.0.2",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.5.1",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-scss": "^4.1.0"
+  },
+  "engines": {
+    "node": "16.13.0"
   },
   "eslintConfig": {
     "extends": [
@@ -84,8 +87,5 @@
     "stylelint": "stylelint \"**/*.{css,scss,sass,js,jsx}\" ",
     "test": "react-scripts test"
   },
-  "version": "0.1.0",
-  "engines": {
-    "node": "16.13.0"
-  }
+  "version": "0.1.0"
 }
