--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -112,7 +112,7 @@
     "jest/require-hook": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/interactive-supports-focus": "off",
-    "jsx-a11y/no-static-element-interactions": "warn",
+    "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/media-has-caption": "off",
     "jsx-quotes": "off",
     "linebreak-style": ["off", "unix"],
